--- a/module3-solution/css/styles.css
+++ b/module3-solution/css/styles.css
@@ -9,4 +9,18 @@
   border: 1px solid #000;   /* black line like in mockup */
 }
 
+/* Default (desktop/tablet) */
+.container {
+  max-width: 900px;
+  margin: 0 auto;
+  padding: 20px;
+}
+
+/* Mobile adjustments */
+@media (max-width: 600px) {
+  .container {
+    padding-left: 25px;
+    padding-right: 25px;
+  }
+}
 
